@@ -47,6 +47,7 @@
 * Adyen: Update shopperInteraction [almalee24] #5273
 * CenPOS: Add test_url [jcreiff] #5274
 * Worldpay: Fix stored credentials issue [jherreraa] #5267
+* StripePI: Update authorization for failed Payment Intents [almalee24] #5260
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
